--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Serlib</h1>
+        <h1>SerLib</h1>
         <h2></h2>
         <a href="https://github.com/Zefiros-Software/SerLib" class="button"><small>View project on</small> GitHub</a>
       </div>
