--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>SerLib</h1>
-        <h2></h2>
+        <h2>The fast and easy to use serialisation library</h2>
         <a href="https://github.com/Zefiros-Software/SerLib" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
